--- a/tecnimotors/src/app/filterbody/aceite/homeaceite/homeaceite.component.html
+++ b/tecnimotors/src/app/filterbody/aceite/homeaceite/homeaceite.component.html
@@ -1,1 +1,204 @@
-<p>homeaceite works!</p>
+<!-- Start preloader -->
+<div id="preloader" #preloader>
+    <div id="ctn-preloader" class="ctn-preloader">
+        <div class="animation-preloader">
+            <div class="spinner"></div>
+            <div class="txt-loading">
+                <span data-text-preloader="C" class="letters-loading">
+                    C
+                </span>
+
+                <span data-text-preloader="A" class="letters-loading">
+                    A
+                </span>
+
+                <span data-text-preloader="R" class="letters-loading">
+                    R
+                </span>
+
+                <span data-text-preloader="G" class="letters-loading">
+                    G
+                </span>
+
+                <span data-text-preloader="A" class="letters-loading">
+                    A
+                </span>
+
+                <span data-text-preloader="N" class="letters-loading">
+                    N
+                </span>
+
+                <span data-text-preloader="D" class="letters-loading">
+                    D
+                </span>
+
+                <span data-text-preloader="O" class="letters-loading">
+                    O
+                </span>
+            </div>
+        </div>
+
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
+</div>
+<!-- End preloader -->
+<app-header></app-header>
+
+<main class="main__content_wrapper">
+
+    <!-- Start breadcrumb section -->
+    <section class="breadcrumb__section breadcrumb__bg">
+        <div class="container">
+            <div class="row row-cols-1">
+                <div class="col">
+                    <div class="breadcrumb__content text-center">
+                        <ul class="breadcrumb__content--menu d-flex justify-content-center">
+                            <li class="breadcrumb__content--menu__items">
+                                <a [routerLink]="['/home']">Pagina Principal</a>
+                            </li>
+                            <li class="breadcrumb__content--menu__items"><span>Aceite</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End breadcrumb section -->
+
+    <!-- Start shop section -->
+    <div class="shop__section section--padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-lg-4 shop-col-width-lg-4">
+                    <form>
+                        <div class="shop__sidebar--widget widget__area d-lg-block">
+                            <div class="single__widget widget__bg">
+                                <h2 class="widget__title h3" style="display: flex;justify-content: space-between;">
+                                    Categoría
+                                    <button type="button" style="color: white;background-color: black;
+                                    border-radius: 5px;cursor: pointer;" (click)="limpiarbtn()">
+                                        Limpiar
+                                    </button>
+                                </h2>
+
+                                <ul class="widget__categories--menu">
+                                    <li class="widget__categories--menu__list">
+                                        <select class="widget__categories--menu__label d-flex align-items-center"
+                                            name="tipoproducthome" style="width: -webkit-fill-available;
+                                            border: 0px solid;padding: 10px;color: #04195b;"
+                                            [(ngModel)]="txtcategiescamara" (change)="ChangeCategorieCamara()">
+                                            <option *ngFor="let item of txtListCategoriesCamera"
+                                                [value]="item.tipo_articulo">{{item.descripcion_tipo_articulo}}</option>
+                                        </select>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="single__widget widget__bg" style="height: 40rem;">
+                                <h2 class="widget__title h3">Modelos</h2>
+                                <div class="form-floating">
+                                    <ng-select [items]="listmodelo" bindValue="id" bindLabel="descripcion_modificada"
+                                        [virtualScroll]="true" dropdownPosition="top"
+                                        style="background-color: white !important;display: contents !important;"
+                                        class="search__filter--select__field " [(ngModel)]="txtmodelo"
+                                        notFoundText="Sin Resultado" (change)="SelectModelo()" name="anchoperfil">
+                                    </ng-select>
+                                    <label for="lblanchoperfil">
+                                        Selecciona modelo
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-xl-9 col-lg-8 shop-col-width-lg-8">
+                    <div class="shop__right--sidebar">
+                        <!-- Start categories section -->
+                        <div class="categories__shop mb-50">
+                            <div class="section__heading border-bottom mb-30">
+                                <h2 class="section__heading--maintitle">Compra de <span>Aceite</span></h2>
+                            </div>
+
+                            <pagination-controls (pageChange)="p=$event" (pageBoundsCorrection)="p=$event"
+                                [directionLinks]="true" [autoHide]="true" [responsive]="true" previousLabel="Anterior"
+                                nextLabel="Siguiente" [maxSize]="10" *ngIf="!loading">
+                            </pagination-controls>
+                            <ul class="categories__shop--inner">
+                                <li class="categories__shop--card" *ngFor="let item of listCamaraGene | paginate: 
+                                    { itemsPerPage: itemper, currentPage: p }, let i = index">
+                                    <a class="categories__shop--card__link">
+                                        <div class="product__card--thumbnail mb-15">
+                                            <a class="product__card--thumbnail__link display-block">
+                                                <img class="categories__thumbnail--img"
+                                                    src="assets/img/product/main-product/product1.webp"
+                                                    style="border-radius: 2rem;border: 1px solid black;transform: scale(1.00);"
+                                                    alt="product-img">
+                                            </a>
+                                            <div class="product__media--view__icon" (click)="BtnRouterCamara(item.id)">
+                                                <a class="product__media--view__icon--link glightbox"
+                                                    data-gallery="product-media-zoom">
+                                                    <svg class="product__items--action__btn--svg"
+                                                        xmlns="http://www.w3.org/2000/svg" width="22.51" height="22.443"
+                                                        viewBox="0 0 512 512">
+                                                        <path
+                                                            d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z"
+                                                            fill="none" stroke="currentColor" stroke-miterlimit="10"
+                                                            stroke-width="32"></path>
+                                                        <path fill="none" stroke="currentColor" stroke-linecap="round"
+                                                            stroke-miterlimit="10" stroke-width="32"
+                                                            d="M338.29 338.29L448 448"></path>
+                                                    </svg>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="categories__content">
+                                            <h2 class="categories__content--title"
+                                                style="width: -webkit-fill-available;">{{item.marca}}</h2>
+                                            <span class="categories__content--subtitle"
+                                                style="width: -webkit-fill-available;text-align: start;">
+                                                Tipo Articulo: {{item.descripcion_tipo_articulo}}
+                                            </span>
+                                            <span class="categories__content--subtitle"
+                                                style="width: -webkit-fill-available;text-align: start;">
+                                                Codigo: {{ getLastFiveDigits(item.codigo) }}
+                                            </span>
+                                            <span class="categories__content--subtitle"
+                                                style="width: -webkit-fill-available;text-align: start;">
+                                                Familia: {{item.familia}}
+                                            </span>
+                                            <span class="categories__content--subtitle"
+                                                style="width: -webkit-fill-available;text-align: start;">
+                                                Subfamilia: {{item.subfamilia}}
+                                            </span>
+                                            <span class="categories__content--subtitle"
+                                                style="width: -webkit-fill-available;text-align: start;">
+                                                Unidad_medida: {{item.unidad_medida}}
+                                            </span>
+                                            <span class="categories__content--subtitle"
+                                                style="width: -webkit-fill-available;text-align: start;">
+                                                Descripcion:{{item.descripcion}}
+                                            </span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <pagination-controls (pageChange)="p=$event" (pageBoundsCorrection)="p=$event"
+                                    [directionLinks]="true" [autoHide]="true" [responsive]="true"
+                                    previousLabel="Anterior" nextLabel="Siguiente" [maxSize]="10">
+                                </pagination-controls>
+                            </ul>
+
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End shop section -->
+
+
+
+</main>
+
+<app-footer></app-footer>
