--- a/tecnimotors/src/app/home/home.component.html
+++ b/tecnimotors/src/app/home/home.component.html
@@ -6928,8 +6928,8 @@
     <!-- Start shipping section -->
 
     <section class="shipping__section">
-        <div class="container">
-            <div class="shipping__inner style2 d-flex">
+        <div class="container" style="text-align: center;">
+            <div class="shipping__inner style2 d-flex" style="justify-content: center;justify-items: center;">
                 <div class="shipping__items style2 d-flex align-items-center">
                     <div class="shipping__icon">
                         <img src="assets/img/other/shipping1.webp" alt="icon-img">
